--- a/projects/frontend/src/app/components/header/header.component.html
+++ b/projects/frontend/src/app/components/header/header.component.html
@@ -1,33 +1,31 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Project Name</a>
-    <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-        aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+        aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="collapsibleNavId">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
+    <a class="navbar-brand home btn">PLAN TO WIN</a>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0 nav-menu-1">
             <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                <div class="dropdown-menu" aria-labelledby="dropdownId">
-                    <a class="dropdown-item" href="#">Action 1</a>
-                    <a class="dropdown-item" href="#">Action 2</a>
-                </div>
+                <a class="nav-link btn" routerLink="/home" data-toggle="collapse">Home</a>
             </li>
         </ul>
-        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Login</a>
+        <ul id="loggedout" class="navbar-nav mt-2 mt-lg-0 nav-menu-1">
+            <li class=" nav-item ">
+                <a class="nav-link btn" routerLink="/signup" data-toggle="collapse">Sign Up</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Logout</a>
+                <a class="nav-link btn" routerLink="/signin" data-toggle="collapse">Sign In</a>
             </li>
-           
+        </ul>
+
+        <ul id="loggedin" class="navbar-nav mt-2 mt-lg-0 nav-menu-1">
+            <li class="nav-item">
+                <a class="nav-link btn" routerLink="/profile" data-toggle="collapse">Profiile</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link btn" onclick="logout()">Sign Out</a>
+            </li>
         </ul>
     </div>
 </nav>
