--- a/projects/frontend/src/app/components/signup/signup.component.html
+++ b/projects/frontend/src/app/components/signup/signup.component.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8 border rounded">
-                    <form method="GET" class="text-left p-4" onsubmit="register()" autocomplete="off">
+                    <form method="POST" class="text-left p-4" onsubmit="register()" autocomplete="off">
                         <h3>Sign Up</h3>
                         <div class="form-group">
                             <label for="name">User Name</label>
