--- a/projects/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/projects/frontend/src/app/components/dashboard/dashboard.component.html
@@ -27,8 +27,7 @@
                 <form class="form-inline">
                     <div class="form-group mr-2">
                         <!-- select for sorting data -->
-                        <select class="form-control form-control-sm" id="sort_by"
-                            onchange="taskServiceObj.sortTasks(this.value)">
+                        <select class="form-control form-control-sm" id="sort_by" onchange="taskServiceObj.sortTasks(this.value)">
                             <option value="all">Sort By</option>
                             <option value="priority">Priority</option>
                             <option value="status">Status</option>
@@ -36,8 +35,7 @@
                     </div>
                     <div class="form-group mr-2">
                         <!-- select for filtering data -->
-                        <select class="form-control form-control-sm" id="filter_priority"
-                            onchange="taskServiceObj.filterTasks(this.value)">
+                        <select class="form-control form-control-sm" id="filter_priority" onchange="taskServiceObj.filterTasks(this.value)">
                             <option value="all">Filter</option>
                             <option value="high">High Priority</option>
                             <option value="medium">Medium Priority</option>
@@ -54,8 +52,7 @@
             </nav>
             <!-- progress bar showing the percentage of tasks completed -->
             <div class="progress m-3">
-                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" id="progress"
-                    aria-valuenow="" aria-valuemin="0" aria-valuemax="100" style="width: 10%">25%</div>
+                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" id="progress" aria-valuenow="" aria-valuemin="0" aria-valuemax="100" style="width: 10%">25%</div>
             </div>
             <!-- list of tasks -->
             <div class="row">
@@ -79,20 +76,17 @@
                                 <td>{{t.task}}</td>
                                 <td>{{t.priority}}</td>
                                 <td>{{t.status}}</td>
-                                <td><a type="button" class="btn text-info" data-toggle="modal" data-target="#viewtask"
-                                        (click)="taskServiceObj.openViewModal(t.tid)">
+                                <td><a type="button" class="btn text-info" data-toggle="modal" data-target="#viewtask">
                                         View
                                     </a>
                                 </td>
                                 <td>
-                                    <a type="button" class="btn text-primary" data-toggle="modal"
-                                        data-target="#edittask" (click)="taskServiceObj.openEditModal(t.tid)">
+                                    <a type="button" class="btn text-primary" data-toggle="modal" data-target="#edittask">
                                         Edit
                                     </a>
                                 </td>
                                 <td>
-                                    <a type="button" class="btn text-danger" (click)="taskServiceObj.delete(t.tid)"
-                                        data-target="#deletetask">
+                                    <a type="button" class="btn text-danger" data-target="#deletetask">
                                         Delete
                                     </a>
                                 </td>
@@ -126,8 +120,7 @@
             <div class="modal-body">
                 <form onsubmit="addTask()">
                     <div class="form-group">
-                        <input class="form-control form-control-sm" type="text" name="task" id="task"
-                            placeholder="do something" required autofocus>
+                        <input class="form-control form-control-sm" type="text" name="task" id="task" placeholder="do something" required autofocus>
                     </div>
                     <div class="form-group">
                         <select class="form-control form-control-sm" name='priority' id="priority">
