--- a/projects/frontend/src/app/components/signup/signup.component.html
+++ b/projects/frontend/src/app/components/signup/signup.component.html
@@ -4,29 +4,44 @@
             <div class="row">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8 border rounded">
-                    <form method="POST" class="text-left p-4" onsubmit="register()" autocomplete="off">
+                    <!-- <form method="POST" class="text-left p-4" onsubmit="register()" autocomplete="off"> -->
+                    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="text-left p-4" autocomplete="off">
                         <h3>Sign Up</h3>
-                        <div class="form-group">
+                        <div class=" form-group">
                             <label for="name">User Name</label>
-                            <input type="text" class="form-control" id="name" name="name" placeholder="name97" required
-                                autofocus>
+                            <input type="text" class="form-control" formControlName="name" id="name" name="name" placeholder="name97" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" required autofocus>
+                            <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+                                <div *ngIf="f.name.errors.required">Name is required</div>
+                            </div>
                         </div>
                         <div class="form-group">
                             <label for="email">Email address</label>
-                            <input type="email" class="form-control" id="email" name="email" placeholder="abc@mail.com"
-                                required>
+                            <input type="email" class="form-control" formControlName="email" id="email" name="email" placeholder="abc@mail.com" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" required>
+                            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                                <div *ngIf="f.email.errors.required">Email is required</div>
+                                <div *ngIf="f.email.errors.pattern">Email is not valid</div>
+                            </div>
                         </div>
                         <div class="form-group">
                             <label for="password">Create Password</label>
-                            <input type="password" class="form-control" id="password" name="password"
-                                placeholder="password" required>
+                            <input type="password" class="form-control" formControlName="password" id="password" name="password" placeholder="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" required>
+                            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                                <div *ngIf="f.password.errors.required">Password is required</div>
+                                <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+                            </div>
                         </div>
                         <div class="form-group">
                             <label for="confirmpassword">Confirm Password</label>
-                            <input type="password" class="form-control" id="confirmpassword" name="confirmpassword"
-                                placeholder="Re-enter password" required>
+                            <input type="password" class="form-control" formControlName="confirmpassword" id="confirmpassword" name="confirmpassword" [ngClass]="{ 'is-invalid': submitted && f.confirmpassword.errors }" placeholder="Re-enter password" required>
+                            <div *ngIf="submitted && f.confirmpassword.invalid" class="invalid-feedback">
+                                <div *ngIf="f.confirmpassword.errors.required">Password is required.</div>
+                                <div *ngIf="f.confirmpassword.errors.confirmedValidator">Password and Confirm Password must be match.</div>
+                            </div>
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" [disabled]="loading" class="btn btn-primary">
+                          <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                          Submit
+                        </button>
                         <p>Have account? <span><a class="btn text-primary" routerLink="/signin">Sign in now</a></span>
                         </p>
                     </form>
