--- a/projects/frontend/src/app/components/signin/signin.component.html
+++ b/projects/frontend/src/app/components/signin/signin.component.html
@@ -4,21 +4,30 @@
             <div class="row">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8 border rounded">
-                    <form method="GET" class="text-left p-4" onsubmit="login()" autocomplete="off">
+                    <form class="text-left p-4" [formGroup]="loginForm" (ngSubmit)="onSubmit()" autocomplete="off">
                         <h3>Sign Up</h3>
                         <div class="form-group">
                             <label for="email">Email address</label>
-                            <input type="email" class="form-control" id="email" name="email" placeholder="abc@mail.com"
-                                required autofocus>
+                            <input type="email" class="form-control" formControlName="email" id="email" name="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" placeholder="abc@mail.com" required autofocus>
+                            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                                <div *ngIf="f.email.errors.required">Email is required</div>
+                            </div>
                         </div>
                         <div class="form-group">
                             <label for="password">Enter Password</label>
-                            <input type="password" class="form-control" id="password" name="password"
-                                placeholder="password" required>
+                            <input type="password" class="form-control" formControlName="password" id="password" name="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" placeholder="password" required>
+                            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                                <div *ngIf="f.password.errors.required">Password is required</div>
+                            </div>
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                        <p>Don't have account? <span><a class="btn text-primary" routerLink="/signup">Sign up
-                                    now</a></span></p>
+                        <button type="submit" class="btn btn-primary" [disabled]="loading">
+                          <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                          Submit
+                        </button>
+                        <p>
+                            Don't have account?
+                            <span><a class="btn text-primary" routerLink="/signup">Sign up now</a></span>
+                        </p>
                     </form>
                 </div>
             </div>
