--- a/projects/frontend/src/app/components/header/header.component.html
+++ b/projects/frontend/src/app/components/header/header.component.html
@@ -1,30 +1,32 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-        aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand home btn">PLAN TO WIN</a>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0 nav-menu-1">
             <li class="nav-item">
-                <a class="nav-link btn" routerLink="/home" data-toggle="collapse">Home</a>
+                <a class="nav-link btn" routerLink="/home" data-toggle="collapse" *ngIf="!loggedInUser">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link btn" routerLink="/dashboard" data-toggle="collapse" *ngIf="loggedInUser">Dashboard</a>
             </li>
         </ul>
         <ul id="loggedout" class="navbar-nav mt-2 mt-lg-0 nav-menu-1">
             <li class=" nav-item ">
-                <a class="nav-link btn" routerLink="/signup" data-toggle="collapse">Sign Up</a>
+                <a class="nav-link btn" routerLink="/signup" data-toggle="collapse" *ngIf="!loggedInUser">Sign Up</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link btn" routerLink="/signin" data-toggle="collapse">Sign In</a>
+                <a class="nav-link btn" routerLink="/signin" data-toggle="collapse" *ngIf="!loggedInUser">Sign In</a>
             </li>
         </ul>
 
         <ul id="loggedin" class="navbar-nav mt-2 mt-lg-0 nav-menu-1">
             <li class="nav-item">
-                <a class="nav-link btn" routerLink="/profile" data-toggle="collapse">Profiile</a>
+                <a class="nav-link btn" routerLink="/profile" data-toggle="collapse" *ngIf="loggedInUser">Profiile</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link btn" onclick="logout()">Sign Out</a>
+                <a class="nav-link btn" *ngIf="loggedInUser" (click)="logout()">Sign Out</a>
             </li>
         </ul>
     </div>
