--- a/projects/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/projects/frontend/src/app/components/dashboard/dashboard.component.html
@@ -81,7 +81,7 @@
                                     </a>
                                 </td>
                                 <td>
-                                    <a type="button" class="btn text-primary" data-toggle="modal" data-target="#edittask" (click)="editTask(t)">
+                                    <a type="button" class="btn text-primary" data-toggle="modal" data-target="#edittask" (click)="editTask(t.id)">
                                         Edit
                                     </a>
                                 </td>
@@ -165,19 +165,19 @@
             </div>
             <div class="modal-body">
                 <div id="editform" *ngIf="eTask">
-                    {{eTask | json}}
+                    <!-- {{eTask | json}} -->
                     <form [formGroup]="updateForm" (ngSubmit)="updateTask()">
                         <div class="form-group">
-                            <input class="form-control form-control-sm" formControlName="task" type="text" value="{{eTask.task}}" required autofocus>
+                            <input class="form-control form-control-sm" formControlName="task" type="text" [(ngModel)]="eTask.task" required autofocus>
                             <div *ngIf="updating && uf.task.errors" class="invalid-feedback">
                                 <div *ngIf="uf.task.errors.required">This field is required</div>
                             </div>
                         </div>
                         <div class="form-group">
                             <select class="form-control form-control-sm" formControlName="priority" name='priority' id="priority">
-                            <option value="high">High Priority</option>
-                            <option value="medium">Medium Priority</option>
-                            <option value="low">Low Priority</option>
+                              <option value="high" [selected]="eTask.priority == 'high'" >High Priority</option>
+                              <option value="medium" [selected]="eTask.priority == 'medium'">Medium Priority</option>
+                              <option value="low" [selected]="eTask.priority == 'low'">Low Priority</option>
                             </select>
                             <div *ngIf="updating && uf.priority.errors" class="invalid-feedback">
                                 <div *ngIf="uf.priority.errors.required">This field is required</div>
@@ -185,10 +185,10 @@
                         </div>
                         <div class="form-group">
                             <select class="form-control form-control-sm" formControlName="status" name="status" id="status">
-                        <option value="upcoming" >Upcoming</option>
-                        <option value="ongoing" >Ongoing</option>
-                        <option value="completed" >Completed</option>
-                    </select>
+                              <option value="upcoming" [selected]="eTask.status == 'upcoming'">Upcoming</option>
+                              <option value="ongoing" [selected]="eTask.status == 'ongoing'">Ongoing</option>
+                              <option value="completed" [selected]="eTask.status == 'completed'">Completed</option>
+                            </select>
                             <div *ngIf="updating && uf.status.errors" class="invalid-feedback">
                                 <div *ngIf="uf.status.errors.required">This field is required</div>
                             </div>
