Passing Task on click for view and edit!

--- a/projects/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/projects/frontend/src/app/components/dashboard/dashboard.component.html
@@ -76,12 +76,12 @@
                                 <td>{{t.task}}</td>
                                 <td>{{t.priority}}</td>
                                 <td>{{t.status}}</td>
-                                <td><a type="button" class="btn text-info" data-toggle="modal" data-target="#viewtask" (click)="viewTask(t.id)">
+                                <td><a type="button" class="btn text-info" data-toggle="modal" data-target="#viewtask" (click)="viewTask(t)">
                                         View
                                     </a>
                                 </td>
                                 <td>
-                                    <a type="button" class="btn text-primary" data-toggle="modal" data-target="#edittask" (click)="editTask(t.id)">
+                                    <a type="button" class="btn text-primary" data-toggle="modal" data-target="#edittask" (click)="editTask(t)">
                                         Edit
                                     </a>
                                 </td>
