solved sonar showed bugs

--- a/projects/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/projects/frontend/src/app/components/dashboard/dashboard.component.html
@@ -207,15 +207,15 @@
                 <div id="viewform">
                     <table *ngIf="viewingTask">
                         <tr>
-                            <th>Description: </th>
+                            <th scope="row">Description: </th>
                             <td>{{ viewingTask.description }}</td>
                         </tr>
                         <tr>
-                            <th>Priority: </th>
+                            <th scope="row">Priority: </th>
                             <td>{{ viewingTask.priority }}</td>
                         </tr>
                         <tr>
-                            <th>Status: </th>
+                            <th scope="row">Status: </th>
                             <td>{{ viewingTask.status }}</td>
                         </tr>
                     </table>
