--- a/projects/frontend/src/app/components/signin/signin.component.html
+++ b/projects/frontend/src/app/components/signin/signin.component.html
@@ -11,6 +11,7 @@
                             <input type="email" class="form-control" formControlName="email" id="email" name="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" placeholder="abc@mail.com" required autofocus>
                             <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
                                 <div *ngIf="f.email.errors.required">Email is required</div>
+                                <div *ngIf="f.email.errors.pattern">Email is not valid</div>
                             </div>
                         </div>
                         <div class="form-group">
